--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/attributes/attribute-add/attribute-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/attributes/attribute-add/attribute-add.component.html
@@ -24,6 +24,9 @@
         </mat-option>
       </mat-select>
     </mat-form-field><br>
+    <mat-form-field>
+      <input matInput type="text" formControlName="productattributevalueId" #productattributevalueId placeholder="Attribute Value" />
+    </mat-form-field>
    <!--  <div [ngSwitch]="typevar">
       <div *ngSwitchCase="'text'">
         <mat-form-field>
@@ -53,7 +56,7 @@
     </div><br /> -->
     <!--DONT FORGET TO PUT VALUES ON CLICK FUNCTION-->
     <button mat-raised-button color="primary" (click)="addAttribute(
-      attributegroupId.value,name.value, description.value, type.value); onNoClick()">
+      attributegroupId.value,name.value, description.value, type.value, productattributevalue.productId.value); onNoClick()">
       Add AttributeGroup
     </button>
   </form>
