--- a/KingPim.Web/ClientApp/src/app/_pages/accounts/accounts.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/accounts/accounts.component.html
@@ -9,7 +9,7 @@
           <strong *ngIf="user.userRoleId === 3">Editor</strong>
           : {{user.username}} ({{user.firstName}} {{user.lastName}})
           <br /><a (click)="deleteUser(user.id)" class="text-danger">Delete</a> |
-          <a (click)="getUser(user.id)" class="text-danger">Edit</a>
+          <a (click)="getUser(user.id)" [routerLink]="['/accounts/', user.id]" class="text-danger">Edit</a>
         </li>
       </ul>
     </div>
