--- a/KingPim.Web/ClientApp/src/app/_pages/accounts/edit-account/edit-account.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/accounts/edit-account/edit-account.component.html
@@ -5,35 +5,37 @@
       <mat-card-title>Account Information</mat-card-title>
     </mat-card-header>
     <mat-card-content>
+      <input type="text" [value]="user.id" />
       <div class="formcontainer">
         <mat-form-field>
           <input matInput type="text" placeholder="First Name" class="form-control"
-                 formControlName="firstName" #firstName [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                 formControlName="firstName" #firstName [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" [value]="user.firstName" />
         </mat-form-field>
         <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
           <div *ngIf="f.firstName.errors.required">First Name is required</div>
         </div>
         <mat-form-field>
           <input matInput type="text" placeholder="Last Name" class="form-control"
-                 formControlName="lastName" #lastName [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                 formControlName="lastName" #lastName [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" [value]="user.lastName" />
         </mat-form-field>
         <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
           <div *ngIf="f.lastName.errors.required">Last Name is required</div>
         </div>
         <mat-form-field>
           <input matInput type="text" placeholder="User Name" class="form-control"
-                 formControlName="username" #username [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                 formControlName="username" #username [ngClass]="{ 'is-invalid': submitted && f.username.errors }" [value]="user.username" />
         </mat-form-field>
         <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
           <div *ngIf="f.username.errors.required">User Name is required</div>
         </div>
         <mat-form-field>
           <input matInput type="email" placeholder="Email" class="form-control"
-                 formControlName="email" #email [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                 formControlName="email" #email [ngClass]="{ 'is-invalid': submitted && f.email.errors }" [value]="user.email" />
         </mat-form-field>
         <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
           <div *ngIf="f.email.errors.required">Email is required</div>
         </div>
+        <h3>Change the password!</h3>
         <mat-form-field>
           <input matInput type="password" placeholder="Password" class="form-control"
                  formControlName="password" #password [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
@@ -55,7 +57,7 @@
         </div><br>
         <!--These should be in a dropdownlist in account menu selection and based on roles-->
         <mat-form-field>
-          <mat-select placeholder="Choose Role" formControlName="userRoleId" #userRoleId>
+          <mat-select placeholder="Choose Role" formControlName="userRoleId" #userRoleId [value]="user.userRoleId">
             <mat-option [value]="1">
               Admin
             </mat-option>
@@ -71,7 +73,7 @@
       </div>
       <mat-card-actions>
         <button mat-raised-button [disabled]="loading">
-          Create Account
+          Edit Account
         </button>
       </mat-card-actions>
     </mat-card-content>
