--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-add/product-add.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-add/product-add.component.html
@@ -25,7 +25,7 @@
               </mat-form-field>
               <mat-form-field>
                 <mat-select placeholder="Select SubCategory" formControlName="subCategoryId" #subCategoryId>
-                  <mat-option [value]="subCategory.id" *ngFor="let subCategory of subcategories ">
+                  <mat-option [value]="product.subCategoryId" *ngFor="let subCategory of subcategories ">
                     {{ subCategory.name}}
                   </mat-option>
                 </mat-select>
