--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
@@ -34,7 +34,7 @@
               </mat-form-field>
               <mat-form-field>
                 <mat-select placeholder="Select SubCategory" formControlName="subCategoryId" #subCategoryId>
-                  <mat-option [value]="product.subCategory.name" *ngFor="let subCategory of subcategories ">
+                  <mat-option [value]="subCategory.id" *ngFor="let subCategory of subcategories ">
                     {{ subCategory.name}}
                   </mat-option>
                 </mat-select>
