--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -10,7 +10,8 @@
   </ng-container>
   <ng-container matColumnDef="Name">
     <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let product">{{product.name}}</td>
+    <td mat-cell *matCellDef="let product"><span matTooltip="{{product.description}}" matTooltipPosition="left"
+        aria-label="Description"></span>{{product.name}}</td>
   </ng-container>
   <ng-container matColumnDef="SubCategory">
     <th mat-header-cell *matHeaderCellDef>SubCategory</th>
@@ -34,14 +35,15 @@
   </ng-container>
   <ng-container matColumnDef="Published">
     <th mat-header-cell *matHeaderCellDef>Published</th>
-      <td mat-cell *matCellDef="let product" style="text-align:center;">
-        <span *ngIf="product.publishedStatus === false">
-          <i class="fa fa-times" style="color:red"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
-        </span>
-        <span *ngIf="product.publishedStatus === true">
-          <i class="fa fa-check" style="color:green"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span>
-        </span>
-      </td>
+    <td mat-cell *matCellDef="let product" style="text-align:center;">
+     
+      <span *ngIf="product.publishedStatus === false">
+        <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" ><i class="fa fa-times" style="color:red"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span></a>
+  </span>
+  <span *ngIf="product.publishedStatus === true">
+    <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)"><i class="fa fa-check" style="color:green"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span></a>
+</span>
+    </td>
 
   </ng-container>
   <ng-container matColumnDef="Edit">
