--- a/KingPim.Web/ClientApp/src/app/_pages/export/export.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/export/export.component.html
@@ -5,41 +5,40 @@
     <div class="col-md-8">
       <h1>Export</h1><br>
       <form [formGroup]="angForm" novalidate>
-          <mat-card>
-            <mat-card-header>
-              <mat-card-title>Export JSON/Xml</mat-card-title>
-            </mat-card-header>
-            <mat-card-actions>
-                <a mat-raised-button (click)="exportProductJson()">Download File for Products</a>
-              </mat-card-actions>
-              <mat-card-actions><a mat-raised-button (click)="exportCategoryJson()">Download File for Categories</a></mat-card-actions>
-              <mat-card-actions><a mat-raised-button (click)="exportSubCategoryJson()">Download File for SubCategories</a></mat-card-actions>
-<br>
-<h6 style="color:red;">* This function is not yet implemented at the moment</h6>
-            <mat-card-content>
-              <div class="formcontainer">
-                <mat-form-field>
-                  <mat-select formControlName="format" #format placeholder="Choose Format">
-                    <mat-option [value]="format" *ngFor="let f of fileformat">
-                      {{f}}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field><br>
-                <mat-checkbox [value]="categories" formControlName="categories" #categories>
-                    <strong>Categories</strong>
-                  </mat-checkbox>
-                  <br>
-                  <mat-checkbox [value]="subcategories" formControlName="subcategories" #subcategories>
-                    <strong>SubCategories</strong>
-                  </mat-checkbox>
-                  <br>
-                  <mat-checkbox [value]="products" formControlName="products" #products>
-                    <strong>Products</strong>
-                  </mat-checkbox>
-                <br />
-              </div>
-            </mat-card-content>
-          </mat-card>
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>Export JSON/Xml</mat-card-title>
+          </mat-card-header>
+          <mat-card-actions><a mat-raised-button (click)="exportProductJson()">Download File for Products</a></mat-card-actions>
+          <mat-card-actions><a mat-raised-button (click)="exportCategoryJson()">Download File for Categories</a></mat-card-actions>
+          <mat-card-actions><a mat-raised-button (click)="exportSubCategoryJson()">Download File for SubCategories</a></mat-card-actions>
+          <mat-card-actions><a mat-raised-button (click)="exportCatalogJson()">Download Whole Catalog</a></mat-card-actions>
+          <br>
+          <h6 style="color:red;">* This function is not yet implemented at the moment</h6>
+          <mat-card-content>
+            <div class="formcontainer">
+              <mat-form-field>
+                <mat-select formControlName="format" #format placeholder="Choose Format">
+                  <mat-option [value]="format" *ngFor="let f of fileformat">
+                    {{f}}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field><br>
+              <mat-checkbox [value]="categories" formControlName="categories" #categories>
+                <strong>Categories</strong>
+              </mat-checkbox>
+              <br>
+              <mat-checkbox [value]="subcategories" formControlName="subcategories" #subcategories>
+                <strong>SubCategories</strong>
+              </mat-checkbox>
+              <br>
+              <mat-checkbox [value]="products" formControlName="products" #products>
+                <strong>Products</strong>
+              </mat-checkbox>
+              <br />
+            </div>
+          </mat-card-content>
+        </mat-card>
         </form>
     </div>
     <div class="col-md-2">
