--- a/KingPim.Web/ClientApp/src/app/_pages/publish/publish.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/publish/publish.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="col-md-8">
       <h1>Publish</h1><br>
-      <h6 style="color:red;">* This function is not yet implemented at the moment there is a publish radio button within the Edit function on the catalog page.
-      the true/false value on the radio button also changes the related value of category and .</h6>
+      <h6 style="color:red;">* This function is not yet implemented at the moment, you can click on the button on the productfrontpage to change
+      true false status.</h6>
       <mat-card>
         <mat-card-header>
           <mat-card-title>Publish selected groups/items</mat-card-title>
