--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -38,10 +38,10 @@
     <td mat-cell *matCellDef="let product" style="text-align:center;">
      
       <span *ngIf="product.publishedStatus === false">
-        <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" ><i class="fa fa-times" style="color:red"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span></a>
+        <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" ><i class="fa fa-times" style="color:red"></i><span>{{ product.publishedStatus }}</span></a>
   </span>
   <span *ngIf="product.publishedStatus === true">
-    <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)"><i class="fa fa-check" style="color:green"></i><span style="visibility:hidden">{{ product.publishedStatus }}</span></a>
+    <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)"><i class="fa fa-check" style="color:green"></i><span>{{ product.publishedStatus }}</span></a>
 </span>
     </td>
 
