kanske bygga om konton lite olika för Admin och "Editor publisher"

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -35,18 +35,18 @@
   </ng-container>
   <ng-container matColumnDef="Published">
     <th mat-header-cell *matHeaderCellDef>Published</th>
-    <td mat-cell *matCellDef="let product" style="text-align:center;">
+    <td mat-cell *matCellDef="let product" style="text-align:center;" >
      
       <span *ngIf="product.publishedStatus === false">
-        <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" ><i class="fa fa-times" style="color:red"></i><span>{{ product.publishedStatus }}</span></a>
+        <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" *ngIf="isAdmin || isPublisher" ><i class="fa fa-times" style="color:red"></i><span>{{ product.publishedStatus }}</span></a>
   </span>
   <span *ngIf="product.publishedStatus === true">
-    <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)"><i class="fa fa-check" style="color:green"></i><span>{{ product.publishedStatus }}</span></a>
+    <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" *ngIf="isAdmin || isPublisher"><i class="fa fa-check" style="color:green"></i><span>{{ product.publishedStatus }}</span></a>
 </span>
     </td>
 
   </ng-container>
-  <ng-container matColumnDef="Edit">
+  <ng-container matColumnDef="Edit" >
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let product" ><button mat-flat-button color="accent" [routerLink]="['/product/edit', product.id]" ><i class="fa fa-edit"></i></button></td>
   </ng-container>
