--- a/KingPim.Web/ClientApp/src/app/_pages/accounts/edit-account/edit-account.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/accounts/edit-account/edit-account.component.html
@@ -5,7 +5,7 @@
       <mat-card-title>Account Information</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <input type="text" [value]="user.id" />
+      <input type="hidden" [value]="user.id" />
       <div class="formcontainer">
         <mat-form-field>
           <input matInput type="text" placeholder="First Name" class="form-control"
