--- a/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/KingPim.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -17,11 +17,6 @@
         </a>
       </li>
       <li class="nav-item centericon" [routerLinkActive]='["link-active"]'>
-        <a class="nav-link" [routerLink]='["/accounts"]' (click)='collapse()'>
-          <i class="fa fa-user fa-3x"></i><br />Accounts
-        </a>
-      </li>
-      <li class="nav-item centericon" [routerLinkActive]='["link-active"]'>
         <a class="nav-link" [routerLink]='["/export"]' (click)='collapse()'>
           <i class="fa fa-save fa-3x"></i><br />Export
         </a>
@@ -31,15 +26,21 @@
           <i class="fa fa-plus fa-3x"></i><br /> Add Product
         </a>
       </li>
-      <ul class="navbar-nav">
-          <li class="nav-item centericon" [routerLinkActive]='["link-active"]'>
-              <a class="nav-link" style="color:black" [routerLink]='["/publish"]' (click)='collapse()'>
-                <i class="fa fa-upload fa-3x"></i><br /> Publish
-              </a>
-            </li>
-          </ul>
     </ul>
     <ul class="navbar-nav">
+      <li class="nav-item centericon" *ngIf="isAdmin" [routerLinkActive]='["link-active"]'>
+        <a class="nav-link" [routerLink]='["/accounts"]' (click)='collapse()'>
+          <i class="fa fa-cog fa-3x" style="color:red"></i><br />Settings
+        </a>
+      </li>
+      <li class="nav-item centericon" [routerLinkActive]='["link-active"]'>
+          <a  class="nav-link" (click)="getUser(currentUser.id)" [routerLink]="['/accounts/', currentUser.id]">
+            <i class="fa fa-user fa-3x"></i><br />Edit Account
+          </a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+
       <li class="nav-item" [routerLinkActive]='["link-active"]'>
         <a class="nav-item nav-link" (click)="logout()">
           Logout - {{currentUser.firstName}} {{currentUser.lastName}}
