current username now displays on adding/editing Products

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-edit/product-edit.component.html
@@ -18,15 +18,16 @@
           <mat-card-content>
             <input type="hidden" [value]="product.version" formControlName="version" #version />
             <input type="hidden" [value]="product.subCategoryId" formControlName="subCategoryId" #subCategoryId />
+            <input type="hidden" [value]="currentUser.username" formControlName="editedBy" #editedBy />
             <div class="formcontainer">
               <!--<mat-radio-group formControlName="publishedStatus" #publishedStatus placeholder="Status" [value]="product.publishedStatus">
-                <mat-radio-button [value]=true>
-                  Publish
-                </mat-radio-button><br>
-                <mat-radio-button [value]=false>
-                  Unpublish
-                </mat-radio-button>
-              </mat-radio-group><br>-->
+      <mat-radio-button [value]=true>
+        Publish
+      </mat-radio-button><br>
+      <mat-radio-button [value]=false>
+        Unpublish
+      </mat-radio-button>
+    </mat-radio-group><br>-->
               <mat-form-field>
                 <input matInput type="text" placeholder="Product Name" class="form-control" formControlName="name" #name [value]="product.name" />
               </mat-form-field>
@@ -47,7 +48,7 @@
         </mat-card>
         <br />
         <mat-card-actions>
-          <button mat-raised-button (click)="updateProduct(name.value, description.value, subCategoryId.value, version.value)">
+          <button mat-raised-button (click)="updateProduct(name.value, description.value, subCategoryId.value, version.value, editedBy.value)">
             Update Product
           </button>
         </mat-card-actions>
