just some value thing left

--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/product-attribute/product-attribute.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/product-attribute/product-attribute.component.html
@@ -16,7 +16,8 @@
         <input matInput type="text" class="form-control" formControlName="value" #value placeholder="Attribute Value" />
       </mat-form-field>
       <br />
-      <button mat-raised-button color="primary" (click)="addAttributeValue(productId.value, productattributeId.value, value.value)">
+      <button mat-raised-button color="primary" (click)="addAttributeValue(productId.value, productattributeId.value, value.value
+              )">
         Add Attribute With Value
       </button>
     </form>
