--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -38,10 +38,10 @@
     <th mat-header-cell *matHeaderCellDef>Published</th>
     <td mat-cell *matCellDef="let product" style="text-align:center;">
       <span *ngIf="product.publishedStatus === false">
-        <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" *ngIf="isAdmin || isPublisher" ><i class="fa fa-times" style="color:red"></i><span>{{ product.publishedStatus }}</span></a>
+        <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" *ngIf="isAdmin || isPublisher" ><i class="fa fa-times" style="color:red"></i></a>
   </span>
   <span *ngIf="product.publishedStatus === true">
-    <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" *ngIf="isAdmin || isPublisher"><i class="fa fa-check" style="color:green"></i><span>{{ product.publishedStatus }}</span></a>
+    <a routerLink="." (click)="changeStatus(product.id, product.publishedStatus)" *ngIf="isAdmin || isPublisher"><i class="fa fa-check" style="color:green"></i></a>
 </span>
     </td>
 
