--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/attributegroups/attributegroup-get/attributegroup-get.component.html
@@ -5,8 +5,8 @@
     <span matBadge="4" matBadgeOverlap="false" matBadgeSize="small"><button (click)="showAttributes(attributegroup.id)"mat-button [matMenuTriggerFor]="menu" matTooltip="{{attributegroup.description}}" matTooltipPosition="left"
         aria-label="Description">{{attributegroup.name}}</button></span> <!--Should Dynamicly count how many items are in that group-->
     <mat-menu #menu="matMenu">
-      <button (click)="openAttDialog(attributegroup.id, attributegroup.name)" mat-menu-item>Add Attributes to group {{attributegroup.name}}</button>
-      <button (click)="openAttListDialog(attributegroup.id, attributegroup.name)" mat-menu-item>Add AttributeList to group {{attributegroup.name}}</button>
+      <button (click)="openAttDialog(attributegroup.id, attributegroup.name)" mat-menu-item><span style="background-color:bisque">Add Attributes to group {{attributegroup.name}}</span></button>
+      <button (click)="openAttListDialog(attributegroup.id, attributegroup.name)" mat-menu-item><span style="background-color:aliceblue">Add AttributeList to group {{attributegroup.name}}</span></button>
       <button class="delbutton" (click)="deleteAttributeGroup(attributegroup.id)" mat-menu-item>Delete AttributeGroup</button>
       <mat-divider></mat-divider><br>
       <ul><li style="list-style-type: none" *ngFor="let att of attributes">{{att.name}} / {{att.type}}</li></ul>
