--- a/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
+++ b/KingPim.Web/ClientApp/src/app/_pages/catalog/products/product-get/product-get.component.html
@@ -27,7 +27,7 @@
   </ng-container>
   <ng-container matColumnDef="Version">
     <th mat-header-cell *matHeaderCellDef>Version</th>
-    <td mat-cell *matCellDef="let product">{{ product.version }}</td>
+    <td mat-cell *matCellDef="let product" style="text-align:center;">{{ product.version }}</td>
   </ng-container>
   <ng-container matColumnDef="Editedby">
     <th mat-header-cell *matHeaderCellDef>User</th>
